--- a/project.config.json
+++ b/project.config.json
@@ -15,6 +15,8 @@
 	"appid": "wxda92424d9380bab2",
 	"projectname": "%E5%94%AE%E8%B4%A7%E6%9C%BA2.0",
 	"isGameTourist": false,
+	"simulatorType": "wechat",
+	"simulatorPluginLibVersion": {},
 	"condition": {
 		"search": {
 			"current": -1,
