--- a/project.config.json
+++ b/project.config.json
@@ -12,7 +12,7 @@
 	},
 	"compileType": "miniprogram",
 	"libVersion": "2.3.0",
-	"appid": "wxda92424d9380bab2",
+	"appid": "wxbf0a2b5ef0ee94c6",
 	"projectname": "%E5%94%AE%E8%B4%A7%E6%9C%BA2.0",
 	"isGameTourist": false,
 	"simulatorType": "wechat",
