--- a/project.config.json
+++ b/project.config.json
@@ -35,7 +35,7 @@
 			"list": []
 		},
 		"miniprogram": {
-			"current": 1,
+			"current": 2,
 			"list": [
 				{
 					"id": 0,
@@ -47,6 +47,13 @@
 					"id": -1,
 					"name": "pages/goods/index",
 					"pathName": "pages/goods/index",
+					"query": "",
+					"scene": null
+				},
+				{
+					"id": -1,
+					"name": "pages/mycenter/index",
+					"pathName": "pages/mycenter/index",
 					"scene": null
 				}
 			]
